<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="location_required_dialog_message">Location permission is required to get your current location would you like to enable it..</string>
    <string name="location_access_granted">"Location Access Granted"</string>
    <string name="location_required">"Location permission is required to get your current location. Would you like to enable it.."</string>
    <string name="permission_denied_explanation">You need to grant all the time location permission in order to select your location.</string>
    <string name="permission_denied_geofence_explanation">You need to grant all the time location permission in order to create Geofence.</string>
    <string name="nuge_user_to_grant_permission">To access location please grant location permission.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="err_select_description">Please enter description</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="location_1">Location 1</string>
    <string name="description">This is the place that made be become a great developer</string>
    <string name="lat_long">Lat : 234 , Long 34.90</string>
    <string name="latlong_unit_format">%f km</string>
    <string name="back_to_list_of_reminders">Back to list of reminders</string>
    <string name="long_press_to_add_reminder">Plese select a POI or Long Press</string>
    <string name="click_to_view_in_map">Click to View In Map</string>
    <string name="no_reminder_data_found">No Reminder Data Found</string>
    <string name="reminder_description">Reminder Description</string>
    <string name="standard">Standard</string>
    <string name="silver">Silver</string>
    <string name="retro">Retro</string>
    <string name="dark">Dark</string>
    <string name="night">Night</string>
    <string name="aubergine">Aubergine</string>
    <string name="request_permission">Request Permission</string>
    <string name="save_location">Save</string>
    <string name="rational_mesasge">Permission to access your Fine location is required for this app to work properly</string>
    <string name="background_location_rationale">Background location access is required for this service</string>
</resources>
